# rawq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
src/cli/: args.rs  daemon_spawn.rs  mod.rs  output.rs  util.rs
src/cli/commands/: chunk.rs  daemon.rs  diff.rs  embed.rs  index.rs  map.rs  mod.rs  model.rs  search.rs  watch.rs
src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
src/embed/: calibrate.rs  config.rs  error.rs  gpu.rs  mod.rs  model.rs
src/index/: chunk.rs  lang.rs  lock.rs  manifest.rs  map.rs  mod.rs  pipeline.rs  store.rs  walker.rs
src/index/chunker/: code.rs  mod.rs  queries.rs  text.rs
src/search/: engine.rs  mod.rs  model_source.rs
testdata/: readme.md  sample.go  sample.java  sample.py  sample.rs  sample.ts
tests/: embed_integration.rs  search_integration.rs
